<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".TakeAPicture">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ajoutPhoto"
                android:text="@string/add_photo"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:layout_margin="10dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/takepicture"
                android:text="@string/take_photo"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@mipmap/app_photo"
                android:drawableLeft="@mipmap/app_photo" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250px"
                android:id="@+id/image"
                android:visibility="gone"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_title"
                android:id="@+id/titre"
                android:visibility="gone"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTitre"
                android:visibility="gone"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description"
                android:text="@string/add_description"
                android:visibility="gone"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editDescription"
                android:visibility="gone"
                android:minLines="2"
                android:maxLines="6"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/boutonEnvoyer"
                android:text="@string/send"
                android:visibility="gone"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
